# RandomCoffeeBot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  create_tables.py  docker-compose.yml  fill_db.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  test_user.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy_stage.yaml
alembic/: env.py
alembic/versions/: b4b4c68b8aa3_.py
infra/: Makefile  docker-compose.prod.yml  docker-compose.tests.yml  docker-pg.yml
src/: constants.py  depends.py  endpoints.py  run.py  settings.py
src/bot/: bot.py  main.py  plugins.py  schemas.py
src/bot/constants/: const_message.py
src/bot/plugins/: __init__.py  admin.py  command_registration.py  matching.py  registration.py  week_routine.py
src/bot/services/: admin.py  create_message_service.py  matching.py  notify_service.py  registration.py  week_routine.py
src/core/: logging.py
src/core/db/: db.py  models.py  session.py
src/core/db/alembic/: env.py
src/core/db/migrations/: env.py
src/core/db/migrations/versions/: 6d584f53f8cf_.py  abb6775f7512_add_match_review.py  ae30bf2db609_add_user_id_to_model_user.py  b0d3d8da38d0_add_match_review.py  b4b4c68b8aa3_.py  cebca1c19787_test.py
src/core/db/repository/: admin.py  base.py  match_review.py  user.py  usersmatch.py
src/core/exceptions/: exceptions.py
src/core/logging/: logger.py
stubs/mmpy_bot/: __init__.pyi  function.pyi
stubs/mmpy_bot/plugins/: __init__.pyi  base.pyi
