[tool.poetry]
name = "randomcoffeebot"
version = "0.1.0"
description = ""
authors = ["Павел Смирнов <baksbannysmirnov@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dependency-injector = "^4.41.0"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
