[tool.poetry]
name = "randomcoffeebot"
version = "0.1.0"
description = ""
authors = ["Павел Смирнов <baksbannysmirnov@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mmpy-bot = "^2.1.3"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
