[tool.poetry]
name = "randomcoffeebot"
version = "0.1.0"
description = ""
authors = ["Павел Смирнов <baksbannysmirnov@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mmpy-bot = "^2.1.3"
httpx = "^0.24.1"
dependency-injector = "^4.41.0"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
structlog = "23.1.0"
rich = "13.5.2"
alembic = "^1.11.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
